# vkdispatch

./: .gitignore  .gitmodules  .pre-commit-config.yaml  MANIFEST.in  README.md  TODOs.txt  activate_env  benchmark_kernel_launch.py  benchmark_param_streaming.py  convolution_debug.py  convolution_speed_test.py  convolved_signal.npy  convolved_signal_fourier.npy  fetch_dependencies.py  fft.glsl  fft.py  fft_new.glsl  fft_srcs.txt  fft_srcs_2nd.txt  fft_srcs_3nd.txt  fft_srcs_new.txt  im.py  implicit_mode_example.py  kernel_launch_overhead.py  merge.py  out.txt  pyproject.toml  qt.py  ravel.py  reference.npy  reference_convolved_signal.npy  reference_convolved_signal_fourier.npy  registers.py  requirements.txt  result.npy  result_new.npy  result_zero.npy  setup.py  setup_old.py  shader.txt  (+22 more)
debug_scripts/: convolution_debug.py  convolution_speed.py  reductions.py
docs/: Makefile  conf.py  cpp_api.rst  getting_started.rst  index.rst  internal_api.rst  python_api.rst  requirements.txt
examples/: first_buffer.py  pytorch_cuda_graph_cuda_python.py
performance_tests/: fft_cuda.cu  fft_make_graph.py  fft_torch.py  fft_vkdispatch.py  fft_vkfft.py  fft_zipfft.py  ffts_per_size.py  ffts_utils.py  kernel_launch_overhead.py  kernel_launch_overhead_matrix.py  kernel_launch_overhead_utils.py  kernel_launch_overhead_utils_matrix.py  kernels_per_batch_size.py  kernels_per_streams.py  kernels_utils.py  run_performance_tests.sh  run_tests.sh  test.cu  test.py  test3.py  test4.py
tests/: 1d_image_interpolation_test.py  test_async_processing.py  test_builder.py  test_codegen.py  (+12 more)
(+459 files in other folders)
