[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "Cython"
]
build-backend = "setuptools.build_meta"

[project]
name = "vkdispatch"
version = "0.0.18"
authors = [
  { name="Shahar Sandhaus", email="shahar.sandhaus@gmail.com" },
]
description = "A Python module for orchestrating and dispatching large computations across multi-GPU systems using Vulkan."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "setuptools>=61.0",
    "numpy",
]
scripts = { vdlist = 'vkdispatch.cli:cli_entrypoint' }

[project.urls]
Homepage = "https://github.com/sharhar/vkdispatch"
Issues = "https://github.com/sharhar/vkdispatch/issues"

[project.optional-dependencies]
cli = ["Click"]
